--- a/src/Styles/Countryes.css
+++ b/src/Styles/Countryes.css
@@ -37,14 +37,25 @@ h1 {
   text-decoration: none;
 }
 
-.countryes_cont{
+.countryes_cont {
   text-decoration: none;
   color: black;
-
 }
 
 .countryes_cont p {
   font-weight: lighter;
   font-size: 18px;
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+@media (max-width: 800px) {
+  .contianer_country {
+    width: 50vh;
+    margin: auto;
+    margin-top: 3vh;
+  }
+  .countryes_cont {
+    width: 60vh;
+  }
 }
