--- a/src/Styles/SearchCountry.css
+++ b/src/Styles/SearchCountry.css
@@ -24,3 +24,10 @@
     width: 35px;
     height: 35px;
 }
+
+@media (max-width: 800px) {
+  .input_section {
+    grid-template-columns: repeat(1, 1fr);
+    width: 60vh;
+  }
+}
