--- a/src/Styles/TotalCountry.css
+++ b/src/Styles/TotalCountry.css
@@ -4,6 +4,8 @@
   width: 80vmax;
   margin: auto;
 }
+
+
 @media (max-width: 1470px) {
   .das {
     grid-template-columns: repeat(4, 1fr);
@@ -16,6 +18,7 @@
 }
 @media (max-width: 800px) {
   .das {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    width: 60vh;
   }
 }
