--- a/src/Styles/TotalCountry.css
+++ b/src/Styles/TotalCountry.css
@@ -19,6 +19,6 @@
 @media (max-width: 800px) {
   .das {
     grid-template-columns: repeat(1, 1fr);
-    width: 60vh;
+    width: max-content;
   }
 }
