--- a/src/Styles/TheCountry.css
+++ b/src/Styles/TheCountry.css
@@ -67,6 +67,7 @@ span {
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin: 0;
   }
   .section_principal {
     display: flex;
