--- a/src/Styles/SearchCountry.css
+++ b/src/Styles/SearchCountry.css
@@ -1,7 +1,7 @@
 .input_section {
   width: 80vmax;
   margin: auto;
-  margin-top: 5vh;
+  padding-top: 5vh;
 }
 
 .input_section input {
@@ -10,7 +10,7 @@
   border-radius: 5px;
   border: none;
   margin-left: 1.5vh;
-  outline: blue;
+  outline: none;
 }
 
 .container_search {
@@ -25,9 +25,12 @@
   height: 35px;
 }
 
+
 @media (max-width: 800px) {
   .input_section {
     width: 90%;
+    margin-top: 0;
+    padding-top: 5vh;
 
   }
   .input_section input {
@@ -40,4 +43,11 @@
   .container_search input {
     margin: 0;
   }
+  .search-active{
+    background-color: rgb(69, 90, 108);
+    transition: 0.5s;
+  }
+
+
+
 }
