--- a/src/Styles/TheCountry.css
+++ b/src/Styles/TheCountry.css
@@ -53,14 +53,61 @@ p {
   font-family: sans-serif;
   font-weight: bold;
 }
+.theCountry_active{
+  background-color: red;
+}
+.theCountry_active h2 {
+  color: white;
+}
+
+.theCountry_active {
+  color: rgb(255, 255, 255);
+}
+
+.theCountry_active span {
+  color: rgb(187, 187, 187);
+}
 
 span {
   font-size: 16px;
   font-weight: lighter;
   color: rgb(53, 53, 53);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Segoe UI", "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+.border_continer {
+  font-family: sans-serif;
+  color: rgb(68, 68, 68);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+}
+
+.borders_active {
+  color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.hola{
+  font-family: sans-serif;
+  font-size: 14px;
+  border: none;
+  box-shadow: 1px 1px 2px 1px rgb(214, 214, 214);
+  margin: 5px;
+  padding: 5px;
+  border-radius: 3px;
+  background-color: rgb(209, 209, 209);
+  cursor: pointer;
+  margin-left: 2vh;
+  margin-top: 1vh;
+}
+
+
 
 @media (max-width: 800px) {
   .country {
@@ -68,6 +115,7 @@ span {
     flex-direction: column;
     width: 100%;
     margin: 0;
+   
   }
   .section_principal {
     display: flex;
@@ -76,10 +124,11 @@ span {
     flex-direction: column;
   }
 
-  .container_section{
-      width: 100%;
+  .container_section {
+    width: 100%;
   }
-  .theImg{
-      width: 100%;
+  .theImg {
+    width: 100%;
   }
+
 }
